# lens

./: .editorconfig  .gitignore  .port-config.json  .prettierrc.json  .rustfmt.toml  CALIB_V22_ACTIVATION_CHECKLIST.md  CALIB_V22_PRODUCTION_DEPLOYMENT.md  CHANGELOG.md  CHANGELOG_OPTIMIZATION.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.baseline  Dockerfile.hermetic  FINAL_EXECUTION_REPORT.md  GREEN_FLIP_CUTOVER.md  HERO_VALIDATION.md  HERO_VALIDATION_COMPLETE.md  LICENSE  MIGRATION_READINESS_REPORT.md  Makefile  PHASE_2_COMPLETION_SUMMARY.md  POST_LAUNCH_CYCLE_COMPLETE.md  PRODUCTION_GAUNTLET_SUMMARY.md  README.md  REPORTING_SYSTEM_V2_IMPLEMENTATION.md  RUST_HTTP_API_MIGRATION.md  RUST_MIGRATION_TEST_COVERAGE_REPORT.md  TESTING_STRATEGY.md  TODO.md  V2.2.2_OPTIMIZATION_CYCLE_SUMMARY.md  ablation_analysis.json  ablation_tests.js  apply-adaptive-config.js  apply-adaptive-patches.js  audit-validation.json  baseline_config_fingerprint.json  baseline_key_numbers.json  baseline_metrics.json  baseline_next.json  (+174 more)
.github/: branch-protection.json
.serena/: project.yml
50/: .managed.json  meta.json
ablation/: semantic_calib.csv
apps/lens-core/: Cargo.toml
apps/lens-core/src/: config.rs  http_server.rs  main.rs
apps/lens-core/src/cli/: clear.rs  index.rs  lsp.rs  mod.rs  optimize.rs  search.rs  serve.rs  stats.rs
archive/: README_legacy.md
artifact/: frozen_artifact_manifest.json
artifacts/: coverage_updated.info  final_coverage.info  latency_surrogate_conformal.pkl  lens-1835351-11182663009461600489_0.profraw  lens-1835351-11233119016411342458_0.profraw  lens-1835351-13287989457259619270_0.profraw  lens-1835351-13769927677532938287_0.profraw  lens-1835351-15843313122195219357_0.profraw  lens-1835351-6600717643169711116_0.profraw  lens-1835534-5320305070282684787_0.profraw  lens-1835541-10742422790427543597_0.profraw  lens-1835541-11152313010893518752_0.profraw  lens-1835541-11233119016411342458_0.profraw  lens-1835541-13769927677532938287_0.profraw  lens-1835541-14440218711409074832_0.profraw  lens-1835541-14840064588839198066_0.profraw  lens-1835541-15843313122195219357_0.profraw  lens-1835541-16009975241746252351_0.profraw  lens-1835541-16622810870719377081_0.profraw  lens-1835541-6084747261422325458_0.profraw  lens-1835541-6600717643169711116_0.profraw  lens-1836373-11152313010893518752_0.profraw  lens-1836373-11233119016411342458_0.profraw  lens-1836373-13769927677532938287_0.profraw  lens-1836373-14440218711409074832_0.profraw  lens-1836373-14840064588839198066_0.profraw  lens-1836373-15843313122195219357_0.profraw  lens-1836373-16009975241746252351_0.profraw  lens-1836373-16244409497874549172_0.profraw  lens-1836373-8830519886851037003_0.profraw  lens-1836381-11182663009461600489_0.profraw  lens-1836381-16244409497874549172_0.profraw  lens-1836383-10742422790427543597_0.profraw  lens-1836383-14440218711409074832_0.profraw  lens-1836383-14840064588839198066_0.profraw  lens-1836383-15843313122195219357_0.profraw  lens-1836383-16622810870719377081_0.profraw  lens-1836383-16718497252069915862_0.profraw  lens-1836383-6600717643169711116_0.profraw  lens-1836383-8830519886851037003_0.profraw  (+103 more)
auditing/: evidence_audits.py
baselines/: elasticsearch_bm25_config.json  elasticsearch_bm25_hash.txt  sourcegraph_search_config.json  sourcegraph_search_hash.txt
bench/: PROTOCOL.md  README.md  cli.ts  competitor-adapters.ts  index.ts  metrics-calculator.ts  mock-competitors.cjs  parquet-exporter.ts  pooled-qrels-builder.ts  sla-execution-engine.ts  systems.v21.yaml  systems.v22.yaml
benches/: search_benchmarks.rs
benchmark-corpus/: coir_queries.json  cosqa_queries.json  csn_queries.json  extraction_metadata.json  query_generation_summary.json  swe_verified_queries.json
benchmark-protocol-results/: attestation.json  execution_summary.json
benchmarks/: AUDIT_PROOF_IMPLEMENTATION_SUMMARY.md  COMPETITIVE_BENCHMARK_SYSTEM_README.md  COMPREHENSIVE_COMPETITOR_BENCHMARK_README.md  README_RIGOROUS_BENCHMARK.md  accuracy-evaluation.js  audit_proof_competitor_benchmark.py  bench_config.yaml  benchmark_with_live_sanity.py  calculate_audit_averages.py  calibrate_ess_thresholds.py  code_search_rag_benchmark.py  code_search_rag_comprehensive.py  competitive_benchmark_system.py  comprehensive_competitor_benchmark.py  demo_audit_proof_benchmark.py  demo_comprehensive_benchmark.py  docker-compose-minimal.yml  docker-compose.yml  enhanced_sanity_pyramid.py  fix_competitive_benchmark_bugs.py  green_ci_gates_system.py  implement_ci_gates.py  live_sanity_integration.py  optimize_pointer_extraction.py  pointer_extract_system.py  real_competitor_systems.py  real_systems_config.yaml  requirements.txt  requirements_comprehensive_benchmark.txt  rigorous_competitor_benchmark.py  run-industry-benchmarks.js  run_benchmark.py  run_enhanced_validation_470.py  run_sanity_baseline.py  rust_integration.py  sanity_ci_gates.yaml  sanity_integration.py  sanity_pyramid.py  sanity_scorecard_publisher.py  scale_core_query_set.py  (+14 more)
canary-results/: canary_5_percent-2025-09-08T18-59-52-079Z.json
chunking/: code_chunkers.py
ci/: deployment_orchestrator.py
clean-baseline/: baseline-v0-summary.md  baseline-v0.json  minimal-dataset-v0.json
config/: baseline-lock-v22.json  prometheus.yml
configs/: README.md  T1_manifest.json  ann_pack_c.yaml  attestation_offline.json  baseline.json  latency_harvest_config.json  lexical_pack_a.yaml  production_monitoring_config.json  router_distilled_int8.json  router_pack_b.yaml  theta_star_production.json
coverage/: coverage-final.json  (+1 more)
infrastructure/containers/ast-grep/: Cargo.toml  Dockerfile  server.rs
rust-core/: Cargo.toml  README.md  build.rs
rust-core/benches/: indexing_benchmarks.rs  search_benchmarks.rs
rust-core/benchmark-results/: golden-dataset.json
rust-core/data/segments/: manifest.json  test-segment.json
rust-core/indexed-content/: test-file.js
rust-core/lens-indexer/: Cargo.toml
rust-core/lens-rpc/: Cargo.toml
rust-core/proto/: lens.proto
rust-core/src/: attestation.rs  indexer.rs  lib.rs  main.rs  mcp.rs  search.rs  server.rs
(+4104 files in other folders)
