[package]
name = "lens-core"
version = "1.0.0"
edition = "2021"
authors = ["Nathan Rice <nathan.alexander.rice@gmail.com>"]
description = "High-performance code search engine with LSP integration and benchmarking"
license = "MIT"
repository = "https://github.com/sibyllinesoft/lens"
homepage = "https://github.com/sibyllinesoft/lens"
documentation = "https://docs.rs/lens-core"

[dependencies]
# Core async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Search engine
tantivy = { version = "0.22", features = ["mmap"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }

# gRPC and protocol buffers
tonic = { version = "0.12", features = ["gzip", "tls"] }
tonic-build = "0.12"
tonic-reflection = "0.12"
prost = "0.13"

# LSP integration
tower-lsp = { version = "0.20", features = ["proposed"], optional = true }
lsp-types = { version = "0.94", optional = true }

# HTTP client for LSP communication
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"

# Cryptography
sha2 = "0.10"
blake3 = "1.5"
hex = "0.4"

# Performance and caching
dashmap = "6.0"
moka = { version = "0.12", features = ["future"] }
parking_lot = "0.12"

# Data structures
indexmap = "2.0"
smallvec = "1.0"
bytes = "1.5"
regex = "1.10"
fastrand = "2.0"
rand = "0.8"

# Time and async utilities
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
futures-util = "0.3"
pin-project-lite = "0.2"

# Configuration
config = "0.14"
toml = "0.8"
clap = { version = "4.4", features = ["derive", "env"] }

# Benchmarking and metrics
criterion = { version = "0.5", features = ["html_reports", "async_tokio"], optional = true }
prometheus = "0.13"
once_cell = "1.19"

# Build info for attestation
built = { version = "0.7", features = ["git2"], optional = true }

# Path and file utilities
walkdir = "2.4"
ignore = "0.4"
globset = "0.4"

# Language detection
tree-sitter = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-javascript = "0.23"

# Process management for LSP servers
tokio-process = "0.2"

[build-dependencies]
built = { version = "0.7", features = ["git2"] }
tonic-build = "0.12"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.0"

[[bin]]
name = "lens"
path = "src/main.rs"

[[bin]]
name = "todo_validation_runner"
path = "src/bin/todo_validation_runner.rs"

[[bin]]
name = "populate_benchmark_corpus"
path = "populate_benchmark_corpus.rs"

[[bin]]
name = "train_ltr"
path = "src/bin/train_ltr.rs"

[[bin]]
name = "calibrate_isotonic"
path = "src/bin/calibrate_isotonic.rs"

[[bin]]
name = "evaluate_sla"
path = "src/bin/evaluate_sla.rs"

[[bin]]
name = "calibration_gate_enforcer"
path = "src/bin/calibration_gate_enforcer.rs"

[[bin]]
name = "adversarial_audit"
path = "src/bin/adversarial_audit.rs"

[[bin]]
name = "test_adversarial"
path = "src/bin/test_adversarial.rs"

[lib]
name = "lens_core"
path = "src/lib.rs"

[[bench]]
name = "search_benchmarks"
harness = false

[features]
default = ["lsp", "benchmarks", "attestation"]
lsp = ["tower-lsp", "lsp-types"]
benchmarks = ["criterion"]
attestation = ["built"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.bench]
debug = true