[package]
name = "lens-core"
version = "1.1.0"
edition = "2021"
authors = ["Nathan Rice <nathan.alexander.rice@gmail.com>"]
description = "Production-ready code search engine with hero-aligned defaults, LSP integration, and validated performance parity"
license = "MIT"
repository = "https://github.com/sibyllinesoft/lens"
homepage = "https://github.com/sibyllinesoft/lens"
documentation = "https://docs.rs/lens-core"
keywords = ["search", "code-search", "lsp", "rust", "lens"]
categories = ["algorithms", "command-line-utilities", "development-tools"]
exclude = [
    "reports/",
    "benchmarks/",
    "validation-data/",
    "benchmark-results/",
    "indexed-content/",
    "target/",
    ".git/",
    "*.csv",
    "*.json.gz",
    "*.ndjson",
    "*.log",
    "coverage/",
    "docs/",
    "scripts/",
    "tools/",
    "docker/",
    "deployment/",
    "ci/",
    "monitoring/",
    "edge_cases/",
    "security/",
    "pinned-datasets/",
    "baseline-results/",
    "*.md",
    "!README.md",
    "!CLAUDE.md",
    "Dockerfile*",
    "docker-compose*",
    "*.sh",
    "*.py",
    "*.yaml",
    "*.yml",
    "*.toml",
    "!Cargo.toml",
    "gauntlet-*",
    "GREEN_FLIP_CUTOVER.md",
    "PRODUCTION_GAUNTLET_SUMMARY.md",
    "FINAL_EXECUTION_REPORT.md",
    "debug_docker.sh",
    "production_smoke_test.py",
    "tests/",
    "examples/",
    "benches/",
    "src/bin/",
    "data/",
    "fixtures/",
    "testdata/",
    "sample_data/",
    "assets/",
    "resources/",
    "manifests/",
    "release/",
    "experiment_*.yaml",
    "*.lock"
]

[dependencies]
# Core async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Search engine
tantivy = { version = "0.22", features = ["mmap"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }

# gRPC and protocol buffers
tonic = { version = "0.12", features = ["gzip", "tls"] }
tonic-build = "0.12"
tonic-reflection = "0.12"
prost = "0.13"

# LSP integration
tower-lsp = { version = "0.20", features = ["proposed"], optional = true }
lsp-types = { version = "0.94", optional = true }

# HTTP server and client
axum = { version = "0.7", features = ["tokio", "json", "ws"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"

# Cryptography and Digital Signatures (for CALIB_V22)
sha2 = "0.10"
blake3 = "1.5"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"

# Scheduling and Time Handling (for CALIB_V22)
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"

# Regular Expressions and Pattern Matching (for Legacy Retirement)
regex = "1.10"
walkdir = "2.4"

# Additional Testing Dependencies for CALIB_V22
tracing-test = { version = "0.2", optional = true }
hex = "0.4"
signature = "2.0"
serde_bytes = "0.11"

# Performance and caching
dashmap = "6.0"
moka = { version = "0.12", features = ["future"] }
parking_lot = "0.12"

# Data structures
indexmap = "2.0"
smallvec = "1.0"
bytes = "1.5"
fastrand = "2.0"

# WASM bindings for TypeScript integration
wasm-bindgen = "0.2"

# Time and async utilities
futures = "0.3"
futures-util = "0.3"
pin-project-lite = "0.2"

# Configuration
config = "0.14"
toml = "0.8"
clap = { version = "4.4", features = ["derive", "env"] }

# Benchmarking and metrics
criterion = { version = "0.5", features = ["html_reports", "async_tokio"], optional = true }
prometheus = "0.13"
once_cell = "1.19"

# Build info for attestation
built = { version = "0.7", features = ["git2"], optional = true }

# Path and file utilities
ignore = "0.4"
globset = "0.4"

# Language detection
tree-sitter = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-javascript = "0.23"

# Machine Learning and Embeddings (Candle) - temporarily disabled due to dependency issues
# candle-core = "0.6"
# candle-nn = "0.6"
# candle-transformers = "0.6"
# hf-hub = "0.3"
# tokenizers = "0.20"

# Process management for LSP servers
tokio-process = "0.2"

[build-dependencies]
built = { version = "0.7", features = ["git2"] }
tonic-build = "0.12"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.0"
criterion = "0.5"
axum-test = "15.0"
tracing-test = "0.2"

[[bin]]
name = "lens"
path = "src/main.rs"

# Hero validation binary
[[bin]]
name = "hero_validation_runner"
path = "src/bin/hero_validation_runner.rs"

# Temporarily disabled while fixing compilation issues
# [[bin]]
# name = "todo_validation_runner"
# path = "src/bin/todo_validation_runner.rs"

# [[bin]]
# name = "populate_benchmark_corpus"
# path = "populate_benchmark_corpus.rs"

# Temporarily disabled while fixing compilation issues
# [[bin]]
# name = "train_ltr"
# path = "src/bin/train_ltr.rs"

# [[bin]]
# name = "calibrate_isotonic" 
# path = "src/bin/calibrate_isotonic.rs"

# [[bin]]
# name = "evaluate_sla"
# path = "src/bin/evaluate_sla.rs"

# [[bin]]
# name = "calibration_gate_enforcer"
# path = "src/bin/calibration_gate_enforcer.rs"

# [[bin]]
# name = "adversarial_audit"
# path = "src/bin/adversarial_audit.rs"

# [[bin]]
# name = "test_adversarial"
# path = "src/bin/test_adversarial.rs"

[lib]
name = "lens_core"
path = "src/lib.rs"


[features]
default = ["lsp", "benchmarks", "attestation", "calib22"]
lsp = ["tower-lsp", "lsp-types"]
benchmarks = ["criterion"]
attestation = ["built"]
lsp-types = ["dep:lsp-types"]
stress-tests = []
calib22 = ["tracing-test", "attestation"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.bench]
debug = true
