[workspace]
resolver = "2"
members = [
    "apps/lens-core",
    "packages/search-engine",
    "packages/lsp-server",
    "packages/lens-common",
    "packages/lens-config",
]

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Search engine
tantivy = { version = "0.22", features = ["mmap"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }

# gRPC and protocol buffers
tonic = { version = "0.12", features = ["gzip", "tls"] }
tonic-build = "0.12"
tonic-reflection = "0.12"
prost = "0.13"

# LSP integration
tower-lsp = { version = "0.20", features = ["proposed"] }
lsp-types = "0.94"

# HTTP server and client
axum = { version = "0.7", features = ["tokio", "json", "ws"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"

# Cryptography and Digital Signatures
sha2 = "0.10"
blake3 = "1.5"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"

# Scheduling and Time Handling
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"

# Regular Expressions and Pattern Matching
regex = "1.10"
walkdir = "2.4"

# Performance and caching
dashmap = "6.0"
moka = { version = "0.12", features = ["future"] }
parking_lot = "0.12"

# Data structures
indexmap = "2.0"
smallvec = "1.0"
bytes = "1.5"
fastrand = "2.0"

# Time and async utilities
futures = "0.3"
futures-util = "0.3"
pin-project-lite = "0.2"

# Configuration
config = "0.14"
toml = "0.8"
dirs = "5.0"
clap = { version = "4.4", features = ["derive", "env"] }

# Benchmarking and metrics
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
prometheus = "0.13"
once_cell = "1.19"
sysinfo = "0.30"

# Build info for attestation
built = { version = "0.7", features = ["git2"] }

# Path and file utilities
ignore = "0.4"
globset = "0.4"
notify = "6.0"

# Language detection
tree-sitter = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-javascript = "0.23"

# Dev dependencies
tempfile = "3.8"
serial_test = "3.0"
axum-test = "15.0"
tracing-test = "0.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.bench]
debug = true
