[package]
name = "lens"
version = "1.1.0"
edition = "2021"
authors = ["Nathan Rice <nathan.alexander.rice@gmail.com>"]
description = "High-performance code search engine with LSP integration - main application"
license = "MIT"

[[bin]]
name = "lens"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }

# Local packages
lens-search-engine = { path = "../../packages/search-engine" }
lens-lsp-server = { path = "../../packages/lsp-server" }
lens-common = { path = "../../packages/lens-common" }

[dev-dependencies]
tempfile = { workspace = true }
tracing-test = { workspace = true }